@@ -1,0 +1,44 @@
+<Type Name="UnhandledExceptionArgs" FullName="GLib.UnhandledExceptionArgs">
+  <TypeSignature Language="C#" Value="public class UnhandledExceptionArgs : UnhandledExceptionEventArgs" />
+  <AssemblyInfo>
+    <AssemblyName>glib-sharp</AssemblyName>
+    <AssemblyVersion>2.10.0.0</AssemblyVersion>
+  </AssemblyInfo>
+  <Base>
+    <BaseTypeName>System.UnhandledExceptionEventArgs</BaseTypeName>
+  </Base>
+  <Interfaces />
+  <Members>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public UnhandledExceptionArgs (Exception e, bool is_terminal);" />
+      <MemberType>Constructor</MemberType>
+      <Parameters>
+        <Parameter Name="e" Type="System.Exception" />
+        <Parameter Name="is_terminal" Type="System.Boolean" />
+      </Parameters>
+      <Docs>
+        <param name="e">Exception.</param>
+        <param name="is_terminal">If <see langword="true" />, the application is terminating.</param>
+        <summary>Public constructor.</summary>
+        <remarks />
+      </Docs>
+    </Member>
+    <Member MemberName="ExitApplication">
+      <MemberSignature Language="C#" Value="public bool ExitApplication { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Boolean</ReturnType>
+      </ReturnValue>
+      <Docs>
+        <summary>ExitApplication property.</summary>
+        <value>If <see langword="true" />, the application will exit.</value>
+        <remarks>Indicates if  an application wants to exit after event propagation is complete.</remarks>
+      </Docs>
+    </Member>
+  </Members>
+  <Docs>
+    <summary>UnhandledExceptionArgs event arguments.</summary>
+    <remarks>Event arguments for <see cref="T:GLib.UnhandledExceptionHandler" /> events.</remarks>
+    <since version="Gtk# 2.10" />
+  </Docs>
+</Type>
