@@ -1,0 +1,22 @@
+<Type Name="UnhandledExceptionHandler" FullName="GLib.UnhandledExceptionHandler">
+  <TypeSignature Language="C#" Value="public delegate void UnhandledExceptionHandler(UnhandledExceptionArgs args);" />
+  <AssemblyInfo>
+    <AssemblyName>glib-sharp</AssemblyName>
+    <AssemblyVersion>2.10.0.0</AssemblyVersion>
+  </AssemblyInfo>
+  <Base>
+    <BaseTypeName>System.Delegate</BaseTypeName>
+  </Base>
+  <Parameters>
+    <Parameter Name="args" Type="GLib.UnhandledExceptionArgs" />
+  </Parameters>
+  <ReturnValue>
+    <ReturnType>System.Void</ReturnType>
+  </ReturnValue>
+  <Docs>
+    <param name="args">Event arguments.</param>
+    <summary>Reports unhandled exceptions.</summary>
+    <remarks>Attach to <see cref="M:GLib.EventManager.UnhandledException" /> event to receive notification of exceptions in managed callback delegates.</remarks>
+    <since version="Gtk# 2.10" />
+  </Docs>
+</Type>
